@@ -1,4 +1,4 @@
-/* Generate mpz_fac_ui data.
+/* Generate data for combinatorics: fac_ui, bin_uiui, ...
 
 Copyright 2002, 2011, 2012 Free Software Foundation, Inc.
 
@@ -39,7 +39,7 @@ gen_consts (int numb, int nail, int limb)
   unsigned long a, b;
   unsigned long ofl, ofe;
 
-  printf ("/* This file is automatically generated by gen-fac_ui.c */\n\n");
+  printf ("/* This file is automatically generated by gen-fac.c */\n\n");
   printf ("#if GMP_NUMB_BITS != %d\n", numb);
   printf ("Error , error this data is for %d GMP_NUMB_BITS only\n", numb);
   printf ("#endif\n");
